--- a/myRockPaperScissors.css
+++ b/myRockPaperScissors.css
@@ -2,6 +2,12 @@ body {
   background-color: rgb(25, 25, 25);
   color: white;
   font-family: Arial;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
 }
 
 .title {
@@ -55,6 +61,8 @@ body {
   cursor: pointer;
   border-radius: 5px;
   transition: background-color 0.2s ease-in-out, transform 0.2s ease-in-out;
+  flex-basis: 45%;
+  font-weight: bold;
 }
 
 .reset-score-button:hover {
@@ -73,4 +81,53 @@ body {
 .auto-play-button:active {
   transform: scale(0.95);
   box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.container {
+  margin: 0 auto;
+  width: 300px;
+  text-align: center;
+}
+
+.button-row {
+  flex-direction: row;
+  justify-content: center;
+  width: 300px;
+}
+
+.scoreboard-row {
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: auto;
+  word-wrap: break-word;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.action-button-row {
+  flex-direction: row;
+  justify-content: center;
+  gap: 10px;
+}
+
+.instructions-row {
+  flex-direction: column;
+  text-align: left;
+}
+
+.title-row, .button-row, .scoreboard-row, .action-button-row, .instructions-row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.title-row {
+  margin-top: 20px;
+}
+
+.button-row {
+  flex-direction: row;
+  width: 300px;
 }
