--- a/rock-paper-scissors/styles/myRockPaperScissors.css
+++ b/rock-paper-scissors/styles/myRockPaperScissors.css
@@ -10,7 +10,7 @@ body {
   margin: 0;
 }
 
-body.light-mode {
+body[data-theme="light-mode"] {
   background-color: rgb(206, 206, 206);
   color: black;
 }
@@ -37,11 +37,11 @@ body.light-mode {
   transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 }
 
-body.light-mode .move-button {
+body[data-theme="light-mode"] .move-button {
   border: 3px solid black;
 }
 
-body.light-mode .move-button:hover {
+body[data-theme="light-mode"] .move-button:hover {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -152,20 +152,29 @@ body.light-mode .move-button:hover {
 }
 
 .theme-button {
-  background-color: #4CAF50;
+  background-color: rgb(206, 206, 206);
   border: none;
   font-size: 15px;
   padding: 8px 15px;
   cursor: pointer;
   border-radius: 5px;
   transition: background-color 0.2s ease-in-out, transform 0.2s ease-in-out;
+  font-weight: bold;
 }
 
 .theme-button:hover {
-  background-color: #3e8e41;
+  background-color: rgb(175, 175, 175);
 }
 
 .theme-button:active {
   transform: scale(0.95);
   box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.theme-button[data-theme="light-mode"] {
+  background-color: rgb(49, 49, 49);
+}
+
+.theme-button[data-theme="light-mode"]:hover {
+  background-color: rgb(80, 80, 80);
 }
