--- a/rock-paper-scissors/styles/myRockPaperScissors.css
+++ b/rock-paper-scissors/styles/myRockPaperScissors.css
@@ -11,7 +11,7 @@ body {
 }
 
 body[data-theme="light-mode"] {
-  background-color: rgb(206, 206, 206);
+  background-color: rgb(180, 180, 180);
   color: black;
 }
 
@@ -152,7 +152,7 @@ body[data-theme="light-mode"] .move-button:hover {
 }
 
 .theme-button {
-  background-color: rgb(206, 206, 206);
+  background-color: rgb(180, 180, 180);
   border: none;
   font-size: 15px;
   padding: 8px 15px;
@@ -163,7 +163,7 @@ body[data-theme="light-mode"] .move-button:hover {
 }
 
 .theme-button:hover {
-  background-color: rgb(175, 175, 175);
+  background-color: rgb(144, 144, 144);
 }
 
 .theme-button:active {
@@ -171,10 +171,12 @@ body[data-theme="light-mode"] .move-button:hover {
   box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
-.theme-button[data-theme="light-mode"] {
+body[data-theme="light-mode"] 
+.theme-button {
   background-color: rgb(49, 49, 49);
 }
 
-.theme-button[data-theme="light-mode"]:hover {
+body[data-theme="light-mode"] 
+.theme-button:hover {
   background-color: rgb(80, 80, 80);
 }
