--- a/rock-paper-scissors/styles/myRockPaperScissors.css
+++ b/rock-paper-scissors/styles/myRockPaperScissors.css
@@ -174,6 +174,7 @@ body[data-theme="light-mode"] .move-button:hover {
 body[data-theme="light-mode"] 
 .theme-button {
   background-color: rgb(49, 49, 49);
+  color: white;
 }
 
 body[data-theme="light-mode"] 
