--- a/rock-paper-scissors/styles/myRockPaperScissors.css
+++ b/rock-paper-scissors/styles/myRockPaperScissors.css
@@ -127,6 +127,7 @@ body[data-theme="light-mode"] .move-button:hover {
 .instructions-row {
   flex-direction: column;
   text-align: left;
+  line-height: 1.5;
 }
 
 .title-row, .button-row, .scoreboard-row, .action-button-row, .instructions-row {
