--- a/styles/index.css
+++ b/styles/index.css
@@ -64,9 +64,9 @@ a:hover {
 
 .project-preview img {
   width: 100%;
-  height: 150px;
-  object-fit: cover;
-  border-radius: 10px 10px 0 0;
+  height: 300px;
+  object-fit: contain;
+  border-radius: 50px;
 }
 
 .project-preview h3 {
