--- a/styles/index.css
+++ b/styles/index.css
@@ -60,13 +60,13 @@ a:hover {
   border: 1px solid #ddd;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  height: 400px;
 }
 
 .project-preview img {
   width: 100%;
-  height: 300px;
+  height: 100%;
   object-fit: contain;
-  border-radius: 100px;
 }
 
 .project-preview h3 {
