--- a/rock-paper-scissors/styles/myRockPaperScissors.css
+++ b/rock-paper-scissors/styles/myRockPaperScissors.css
@@ -3,7 +3,6 @@ body {
   color: white;
   font-family: Arial;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100vh;
@@ -13,6 +12,13 @@ body {
 body[data-theme="light-mode"] {
   background-color: rgb(180, 180, 180);
   color: black;
+}
+
+.content-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 300px;
 }
 
 .title {
