--- a/styles/index.css
+++ b/styles/index.css
@@ -64,9 +64,9 @@ a:hover {
 }
 
 .project-preview img {
-  width: 100%;
-  height: 100%;
+  height: 250px;
   object-fit: contain;
+  border-radius: 10px;
 }
 
 .project-preview h3 {
