--- a/rock-paper-scissors/styles/myRockPaperScissors.css
+++ b/rock-paper-scissors/styles/myRockPaperScissors.css
@@ -69,6 +69,7 @@ body[data-theme="light-mode"] .move-button:hover {
 
 .score {
   margin-top: 60px;
+  min-height: 20px;
 }
 
 .reset-score-button,
