--- a/rock-paper-scissors/styles/myRockPaperScissors.css
+++ b/rock-paper-scissors/styles/myRockPaperScissors.css
@@ -119,7 +119,7 @@ body[data-theme="light-mode"] .move-button:hover {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: auto;
+  height: 200px;
   word-wrap: break-word;
   text-align: center;
   margin-bottom: 40px;
