--- a/rock-paper-scissors/styles/myRockPaperScissors.css
+++ b/rock-paper-scissors/styles/myRockPaperScissors.css
@@ -68,7 +68,8 @@ body[data-theme="light-mode"] .move-button:hover {
 }
 
 .score {
-  margin-top: 30px;
+  margin: 0;
+  padding: 15px;
   min-height: 20px;
 }
 
